<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:elevation="10dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/backarrow" />

        <TextView
            android:id="@+id/tvView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="View Profile"
            android:textColor="#fff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/str_tvEdit"
            android:textColor="#fff"
            android:textSize="20dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:src="@drawable/edit_icon" />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="@+id/clProfile"
                    app:layout_constraintStart_toStartOf="@+id/clProfile"
                    app:layout_constraintTop_toTopOf="@+id/clProfile">

                    <FrameLayout
                        android:id="@+id/flProfile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/civCameraIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|center_horizontal"
                            android:alpha="0.9"
                            android:background="@android:color/transparent"
                            android:src="@drawable/cameraicon"
                            android:visibility="gone" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/cimgUserprofile"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:alpha="0.9" />
                    </FrameLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/flProfile"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />


                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvFirstNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:focusable="false"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout5"
                    app:layout_constraintTop_toBottomOf="@+id/rlProfileImage">

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:backgroundTint="#fff"
                        android:digits="ABCDEFGHIJKlmnopqrstvuwxyzabcdefghijklmnopqrstuvwxyz"
                        android:ellipsize="end"
                        android:foregroundTint="#fff"
                        android:hint="@string/str_etFirstName"
                        android:imeOptions="flagNavigateNext"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fff"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:translationY="-10dp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvFirstError"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-20dp"
                    android:text="Enter Valid First Name"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tvFirstNameLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvFirstNameLabel" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvLastNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout5"
                    app:layout_constraintStart_toStartOf="@+id/tvFirstError"
                    app:layout_constraintTop_toBottomOf="@+id/tvFirstError">

                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:backgroundTint="#fff"
                        android:digits="ABCDEFGHIJKlmnopqrstvuwxyzabcdefghijklmnopqrstuvwxyz"
                        android:foregroundTint="#fff"
                        android:hint="@string/str_etLastName"
                        android:imeOptions="flagNavigateNext"
                        android:inputType="textCapSentences"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fff"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:translationY="-10dp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvLastError"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-20dp"
                    android:paddingBottom="20dp"
                    android:text="Enter valid Last Name"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tvLastNameLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvLastNameLabel" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:clickable="false"
                    android:singleLine="true"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout5"
                    app:layout_constraintStart_toStartOf="@+id/tvLastError"
                    app:layout_constraintTop_toBottomOf="@+id/tvLastError">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:backgroundTint="#fff"
                        android:foregroundTint="#fff"
                        android:hint="@string/str_etEmail"
                        android:imeOptions="flagNavigateNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fff"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:translationY="-10dp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvEmailError"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-20dp"
                    android:text="Enter valid Email"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tvEmailId"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmailId" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>

    <Button
        android:id="@+id/btnSignout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonbackroundgreen"
        android:elevation="20dp"
        android:shadowColor="#fff"
        android:text="@string/str_btnSignout"
        android:textColor="#fff"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scroll" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonbackroundgreen"
        android:elevation="10dp"
        android:shadowColor="#fff"
        android:text="@string/str_btnSave"
        android:textColor="#fff"
        android:textSize="20sp"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
