...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/str_cancel_desc1"
...
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#e6e6e6" />

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/str_ok"
...
